[package]
name = "baby_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"
rocket_contrib ={version= "0.4.11", features = ["templates"]}
tokio = { version = "1.15.0", features = ["full"] }
raspicam = "0.1.0"
libcamera = "0.2.1"
